--- a/style.css
+++ b/style.css
@@ -9,6 +9,12 @@ a {
   transition: 0.3s;
 }
 
+h1 {
+  text-align: center;
+  font-size: 3rem;
+  margin-top: 100px;
+}
+
 a:hover {
   opacity: 0.7;
 }
