--- a/style.css
+++ b/style.css
@@ -66,6 +66,7 @@ main {
   height: 2px;
   background: #fff;
   margin: 6px;
+  transition: 0.3s;
 }
 
 @media (max-width: 999px) {
@@ -114,5 +115,17 @@ main {
 
   .mobile-menu {
     display: block;
+  }
+
+  .mobile-menu.active .line1 {
+    transform: rotate(-45deg) translate(-8px, 8px);
+  }
+
+  .mobile-menu.active .line2 {
+    opacity: 0;
+  }
+
+  .mobile-menu.active .line3 {
+    transform: rotate(45deg) translate(-5px, -7px);
   }
 }
